<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.grido.activities.SearchSettingsActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageSizeSpinner"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dropdown"
        android:layout_toEndOf="@+id/imageTypeTextView"
        android:layout_toRightOf="@+id/imageTypeTextView"
        android:touchscreenBlocksFocus="false"
        android:transitionGroup="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colorFilterSpinner"
        android:layout_below="@+id/imageSizeSpinner"
        android:spinnerMode="dropdown"
        android:layout_alignLeft="@+id/imageSizeSpinner"
        android:layout_alignStart="@+id/imageSizeSpinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageTypeSpinner"
        android:layout_below="@+id/colorFilterSpinner"
        android:spinnerMode="dropdown"
        android:layout_alignLeft="@+id/colorFilterSpinner"
        android:layout_alignStart="@+id/colorFilterSpinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/siteFilterEditText"
        android:layout_alignBottom="@+id/siteFilterTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/siteFilterTextView"
        android:layout_alignLeft="@+id/imageTypeSpinner"
        android:layout_alignStart="@+id/imageTypeSpinner"
        android:inputType="textUri" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_filter_label"
        android:id="@+id/siteFilterTextView"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/imageTypeSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size_label"
        android:id="@+id/imageSizeTextView"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter_label"
        android:id="@+id/colorFilterTextView"
        android:textSize="18sp"
        android:layout_alignTop="@+id/colorFilterSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type_label"
        android:id="@+id/imageTypeTextView"
        android:textSize="18sp"
        android:layout_below="@+id/colorFilterSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_title"
        android:id="@+id/saveButton"
        android:layout_below="@+id/siteFilterEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />
</RelativeLayout>
